--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
+    "paths": {
+      "stepper": [
+        "dist/stepper"
+      ]
+    },
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": [
